perf: scalability and saga metrics, migrate to Java 25 with GraalVM G1GC