@@ -10,6 +10,7 @@ import com.thesis.common.events.OrderCreatedEvent;
 import com.thesis.common.exception.OrderNotFoundException;
 import com.thesis.common.metrics.SagaMetrics;
 import com.thesis.common.metrics.SagaMetricsHelper;
+import com.thesis.common.util.TransactionHelper;
 import io.micrometer.core.instrument.Counter;
 import io.micrometer.core.instrument.MeterRegistry;
 import io.micrometer.core.instrument.Timer;
@@ -22,23 +23,13 @@ import org.springframework.retry.annotation.Backoff;
 import org.springframework.retry.annotation.Retryable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.transaction.support.TransactionSynchronization;
-import org.springframework.transaction.support.TransactionSynchronizationManager;
 
 import java.math.BigDecimal;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
-/**
- * Order Service handling order lifecycle in choreography-based saga pattern.
- *
- * <p>Uses Spring Retry's @Retryable to handle optimistic locking conflicts that can occur
- * when multiple Kafka events (payment, inventory, shipping) arrive concurrently and
- * try to update the same order record.</p>
- */
 @Service
 @Slf4j
 public class OrderService {
@@ -62,7 +53,6 @@ public class OrderService {
         this.orderRepository = orderRepository;
         this.eventPublisher = eventPublisher;
 
-        // Metrics
         this.orderCreatedCounter = meterRegistry.counter(SagaMetrics.ORDERS_CREATED,
             SagaMetrics.TAG_SERVICE, SagaMetrics.SERVICE_CHOREOGRAPHY);
         this.orderCompletedCounter = meterRegistry.counter(SagaMetrics.ORDERS_COMPLETED,
@@ -85,53 +75,46 @@ public class OrderService {
         try {
             MDC.put("correlationId", correlationId);
             return orderProcessingTimer.record(() -> {
-                log.info("Creating order for customer: {}", request.getCustomerId());
+                log.debug("Creating order for customer: {}", request.customerId());
 
                 String orderId = UUID.randomUUID().toString();
                 MDC.put("orderId", orderId);
 
                 Order order = Order.builder()
                     .orderId(orderId)
-                    .customerId(request.getCustomerId())
-                    .shippingAddress(request.getShippingAddress())
+                    .customerId(request.customerId())
+                    .shippingAddress(request.shippingAddress())
                     .status(Order.OrderStatus.PENDING)
                     .build();
 
-                // Calculate total and add items with validation
-                BigDecimal total = BigDecimal.ZERO;
-                for (CreateOrderRequest.OrderItemRequest itemRequest : request.getItems()) {
+                request.items().forEach(itemRequest -> {
                     validateOrderItem(itemRequest);
-
-                    OrderItem item = OrderItem.builder()
-                        .productId(itemRequest.getProductId())
-                        .productName(itemRequest.getProductName())
-                        .quantity(itemRequest.getQuantity())
-                        .price(itemRequest.getPrice())
-                        .build();
-                    order.addItem(item);
-                    total = total.add(itemRequest.getPrice().multiply(BigDecimal.valueOf(itemRequest.getQuantity())));
-                }
-                order.setTotalAmount(total);
+                    order.addItem(OrderItem.builder()
+                        .productId(itemRequest.productId())
+                        .productName(itemRequest.productName())
+                        .quantity(itemRequest.quantity())
+                        .price(itemRequest.price())
+                        .build());
+                });
+                order.setTotalAmount(request.items().stream()
+                    .map(item -> item.price().multiply(BigDecimal.valueOf(item.quantity())))
+                    .reduce(BigDecimal.ZERO, BigDecimal::add));
 
                 Order savedOrder = orderRepository.save(order);
                 metricsHelper.recordDbInsert(orderId, SagaMetrics.ENTITY_ORDER);
-                log.info("Order created with ID: {}", savedOrder.getOrderId());
+                log.debug("Order created with ID: {}", savedOrder.getOrderId());
 
-                // Build and publish event after transaction commit
                 OrderCreatedEvent event = buildOrderCreatedEvent(savedOrder, correlationId);
                 publishEventAfterCommit(event, orderId, correlationId);
 
                 return mapToResponse(savedOrder);
             });
         } finally {
-            MDC.clear();
+            MDC.remove("orderId");
+            MDC.remove("correlationId");
         }
     }
 
-    /**
-     * Updates order with payment information.
-     * Uses @Retryable to handle concurrent updates from parallel event processing.
-     */
     @Transactional
     @Retryable(
         retryFor = ObjectOptimisticLockingFailureException.class,
@@ -143,7 +126,7 @@ public class OrderService {
 
         try {
             MDC.put("orderId", orderId);
-            log.info("Updating order {} with payment ID: {}", orderId, paymentId);
+            log.debug("Updating order {} with payment ID: {}", orderId, paymentId);
 
             Order order = findOrderOrThrow(orderId);
             order.setPaymentId(paymentId);
@@ -152,14 +135,10 @@ public class OrderService {
             orderRepository.save(order);
             metricsHelper.recordDbUpdate(orderId, SagaMetrics.ENTITY_ORDER);
         } finally {
-            MDC.clear();
+            MDC.remove("orderId");
         }
     }
 
-    /**
-     * Updates order with inventory reservation information.
-     * Uses @Retryable to handle concurrent updates from parallel event processing.
-     */
     @Transactional
     @Retryable(
         retryFor = ObjectOptimisticLockingFailureException.class,
@@ -171,7 +150,7 @@ public class OrderService {
 
         try {
             MDC.put("orderId", orderId);
-            log.info("Updating order {} with reservation ID: {}", orderId, reservationId);
+            log.debug("Updating order {} with reservation ID: {}", orderId, reservationId);
 
             Order order = findOrderOrThrow(orderId);
             order.setReservationId(reservationId);
@@ -180,15 +159,10 @@ public class OrderService {
             orderRepository.save(order);
             metricsHelper.recordDbUpdate(orderId, SagaMetrics.ENTITY_ORDER);
         } finally {
-            MDC.clear();
+            MDC.remove("orderId");
         }
     }
 
-    /**
-     * Updates order with shipping information and completes the saga in a single atomic operation.
-     * This prevents race conditions when the shipping event arrives while other updates are in progress.
-     * Uses @Retryable to handle concurrent updates from parallel event processing.
-     */
     @Transactional
     @Retryable(
         retryFor = ObjectOptimisticLockingFailureException.class,
@@ -201,11 +175,10 @@ public class OrderService {
 
         try {
             MDC.put("orderId", orderId);
-            log.info("Completing order {} with shipping ID: {} and tracking: {}", orderId, shippingId, trackingNumber);
+            log.debug("Completing order {} with shipping ID: {} and tracking: {}", orderId, shippingId, trackingNumber);
 
             Order order = findOrderOrThrow(orderId);
 
-            // Update shipping info and complete in single operation
             order.setShippingId(shippingId);
             order.setTrackingNumber(trackingNumber);
             order.setStatus(Order.OrderStatus.COMPLETED);
@@ -213,19 +186,14 @@ public class OrderService {
             orderRepository.save(order);
             metricsHelper.recordDbUpdate(orderId, SagaMetrics.ENTITY_ORDER);
 
-            // Record completion metrics
             recordSagaCompletion(order);
 
-            log.info("Order {} completed successfully", orderId);
+            log.debug("Order {} completed successfully", orderId);
         } finally {
-            MDC.clear();
+            MDC.remove("orderId");
         }
     }
 
-    /**
-     * Cancels an order with the given reason.
-     * Uses @Retryable to handle concurrent updates from parallel event processing.
-     */
     @Transactional
     @Retryable(
         retryFor = ObjectOptimisticLockingFailureException.class,
@@ -237,7 +205,7 @@ public class OrderService {
 
         try {
             MDC.put("orderId", orderId);
-            log.info("Cancelling order {} due to: {}", orderId, reason);
+            log.debug("Cancelling order {} due to: {}", orderId, reason);
 
             Order order = findOrderOrThrow(orderId);
             order.setStatus(Order.OrderStatus.CANCELLED);
@@ -246,10 +214,9 @@ public class OrderService {
             orderRepository.save(order);
             metricsHelper.recordDbUpdate(orderId, SagaMetrics.ENTITY_ORDER);
 
-            // Record failure metrics
             recordSagaFailure(order);
         } finally {
-            MDC.clear();
+            MDC.remove("orderId");
         }
     }
 
@@ -263,7 +230,7 @@ public class OrderService {
                 .map(this::mapToResponse)
                 .orElseThrow(() -> new OrderNotFoundException(orderId));
         } finally {
-            MDC.clear();
+            MDC.remove("orderId");
         }
     }
 
@@ -275,28 +242,28 @@ public class OrderService {
             MDC.put("customerId", customerId);
             return orderRepository.findByCustomerId(customerId).stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
         } finally {
-            MDC.clear();
+            MDC.remove("customerId");
         }
     }
 
     private void validateOrderItem(CreateOrderRequest.OrderItemRequest item) {
-        if (item.getQuantity() <= 0) {
+        if (item.quantity() <= 0) {
             throw new IllegalArgumentException(
-                "Item quantity must be positive: " + item.getQuantity() +
-                    " for product: " + item.getProductId());
+                "Item quantity must be positive: %d for product: %s"
+                    .formatted(item.quantity(), item.productId()));
         }
-        if (item.getPrice() == null || item.getPrice().compareTo(BigDecimal.ZERO) <= 0) {
+        if (item.price() == null || item.price().compareTo(BigDecimal.ZERO) <= 0) {
             throw new IllegalArgumentException(
-                "Item price must be positive: " + item.getPrice() +
-                    " for product: " + item.getProductId());
+                "Item price must be positive: %s for product: %s"
+                    .formatted(item.price(), item.productId()));
         }
     }
 
     private void validateNotBlank(String value, String fieldName) {
         if (value == null || value.isBlank()) {
-            throw new IllegalArgumentException(fieldName + " cannot be null or blank");
+            throw new IllegalArgumentException("%s cannot be null or blank".formatted(fieldName));
         }
     }
 
@@ -306,50 +273,29 @@ public class OrderService {
     }
 
     private OrderCreatedEvent buildOrderCreatedEvent(Order order, String correlationId) {
-        return OrderCreatedEvent.builder()
-            .orderId(order.getOrderId())
-            .customerId(order.getCustomerId())
-            .shippingAddress(order.getShippingAddress())
-            .totalAmount(order.getTotalAmount())
-            .correlationId(correlationId)
-            .createdAt(Instant.now())
-            .items(order.getItems().stream()
-                .map(item -> OrderCreatedEvent.OrderItemEvent.builder()
-                    .productId(item.getProductId())
-                    .productName(item.getProductName())
-                    .quantity(item.getQuantity())
-                    .price(item.getPrice())
-                    .build())
-                .collect(Collectors.toList()))
-            .build();
+        return new OrderCreatedEvent(
+            order.getOrderId(),
+            order.getCustomerId(),
+            order.getShippingAddress(),
+            correlationId,
+            order.getItems().stream()
+                .map(item -> new OrderCreatedEvent.OrderItemEvent(
+                    item.getProductId(),
+                    item.getProductName(),
+                    item.getQuantity(),
+                    item.getPrice()))
+                .toList(),
+            order.getTotalAmount(),
+            Instant.now());
     }
 
     private void publishEventAfterCommit(OrderCreatedEvent event, String orderId, String correlationId) {
-        if (TransactionSynchronizationManager.isSynchronizationActive()) {
-            TransactionSynchronizationManager.registerSynchronization(
-                new TransactionSynchronization() {
-                    @Override
-                    public void afterCommit() {
-                        try {
-                            MDC.put("orderId", orderId);
-                            MDC.put("correlationId", correlationId);
-                            eventPublisher.publishOrderCreated(event);
-                            metricsHelper.recordMessageSent(orderId, SagaMetrics.TYPE_EVENT);
-                            orderCreatedCounter.increment();
-                        } catch (Exception e) {
-                            log.error("Failed to publish OrderCreatedEvent after commit for order: {}", orderId, e);
-                        } finally {
-                            MDC.clear();
-                        }
-                    }
-                }
-            );
-        } else {
-            // No active transaction (e.g., in tests), publish immediately
+        Runnable publishAction = () -> {
             eventPublisher.publishOrderCreated(event);
             metricsHelper.recordMessageSent(orderId, SagaMetrics.TYPE_EVENT);
             orderCreatedCounter.increment();
-        }
+        };
+        TransactionHelper.executeAfterCommit(publishAction, orderId, correlationId);
     }
 
     private void recordSagaCompletion(Order order) {
@@ -374,21 +320,19 @@ public class OrderService {
     }
 
     private OrderResponse mapToResponse(Order order) {
-        return OrderResponse.builder()
-            .orderId(order.getOrderId())
-            .customerId(order.getCustomerId())
-            .status(order.getStatus().name())
-            .totalAmount(order.getTotalAmount())
-            .createdAt(order.getCreatedAt())
-            .updatedAt(order.getUpdatedAt())
-            .items(order.getItems().stream()
-                .map(item -> OrderResponse.OrderItemResponse.builder()
-                    .productId(item.getProductId())
-                    .productName(item.getProductName())
-                    .quantity(item.getQuantity())
-                    .price(item.getPrice())
-                    .build())
-                .collect(Collectors.toList()))
-            .build();
+        return new OrderResponse(
+            order.getOrderId(),
+            order.getCustomerId(),
+            order.getStatus().name(),
+            order.getItems().stream()
+                .map(item -> new OrderResponse.OrderItemResponse(
+                    item.getProductId(),
+                    item.getProductName(),
+                    item.getQuantity(),
+                    item.getPrice()))
+                .toList(),
+            order.getTotalAmount(),
+            order.getCreatedAt(),
+            order.getUpdatedAt());
     }
 }
