@@ -4,7 +4,6 @@ import org.junit.jupiter.api.Test;
 
 import java.math.BigDecimal;
 import java.time.Instant;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -12,45 +11,44 @@ import static org.assertj.core.api.Assertions.assertThat;
 class OrderCreatedEventTest {
 
     @Test
-    void shouldBuildOrderCreatedEventWithAllFields() {
+    void shouldCreateOrderCreatedEventWithAllFields() {
         // Given
         String orderId = "ORDER-123";
         String customerId = "CUST-001";
         String shippingAddress = "123 Main St";
+        String correlationId = "CORR-001";
         BigDecimal totalAmount = new BigDecimal("199.99");
         Instant createdAt = Instant.now();
 
-        OrderCreatedEvent.OrderItemEvent item = OrderCreatedEvent.OrderItemEvent.builder()
-                .productId("PROD-001")
-                .productName("Test Product")
-                .quantity(2)
-                .price(new BigDecimal("99.99"))
-                .build();
-
-        List<OrderCreatedEvent.OrderItemEvent> items = Arrays.asList(item);
+        var item = new OrderCreatedEvent.OrderItemEvent(
+                "PROD-001",
+                "Test Product",
+                2,
+                new BigDecimal("99.99"));
 
         // When
-        OrderCreatedEvent event = OrderCreatedEvent.builder()
-                .orderId(orderId)
-                .customerId(customerId)
-                .shippingAddress(shippingAddress)
-                .items(items)
-                .totalAmount(totalAmount)
-                .createdAt(createdAt)
-                .build();
+        var event = new OrderCreatedEvent(
+                orderId,
+                customerId,
+                shippingAddress,
+                correlationId,
+                List.of(item),
+                totalAmount,
+                createdAt);
 
         // Then
-        assertThat(event.getOrderId()).isEqualTo(orderId);
-        assertThat(event.getCustomerId()).isEqualTo(customerId);
-        assertThat(event.getShippingAddress()).isEqualTo(shippingAddress);
-        assertThat(event.getTotalAmount()).isEqualTo(totalAmount);
-        assertThat(event.getCreatedAt()).isEqualTo(createdAt);
-        assertThat(event.getItems()).hasSize(1);
-        assertThat(event.getItems().get(0).getProductId()).isEqualTo("PROD-001");
+        assertThat(event.orderId()).isEqualTo(orderId);
+        assertThat(event.customerId()).isEqualTo(customerId);
+        assertThat(event.shippingAddress()).isEqualTo(shippingAddress);
+        assertThat(event.correlationId()).isEqualTo(correlationId);
+        assertThat(event.totalAmount()).isEqualTo(totalAmount);
+        assertThat(event.createdAt()).isEqualTo(createdAt);
+        assertThat(event.items()).hasSize(1);
+        assertThat(event.items().getFirst().productId()).isEqualTo("PROD-001");
     }
 
     @Test
-    void shouldBuildOrderItemEventWithAllFields() {
+    void shouldCreateOrderItemEventWithAllFields() {
         // Given
         String productId = "PROD-001";
         String productName = "Test Product";
@@ -58,59 +56,52 @@ class OrderCreatedEventTest {
         BigDecimal price = new BigDecimal("49.99");
 
         // When
-        OrderCreatedEvent.OrderItemEvent item = OrderCreatedEvent.OrderItemEvent.builder()
-                .productId(productId)
-                .productName(productName)
-                .quantity(quantity)
-                .price(price)
-                .build();
+        var item = new OrderCreatedEvent.OrderItemEvent(productId, productName, quantity, price);
 
         // Then
-        assertThat(item.getProductId()).isEqualTo(productId);
-        assertThat(item.getProductName()).isEqualTo(productName);
-        assertThat(item.getQuantity()).isEqualTo(quantity);
-        assertThat(item.getPrice()).isEqualTo(price);
+        assertThat(item.productId()).isEqualTo(productId);
+        assertThat(item.productName()).isEqualTo(productName);
+        assertThat(item.quantity()).isEqualTo(quantity);
+        assertThat(item.price()).isEqualTo(price);
     }
 
     @Test
-    void shouldCreateOrderCreatedEventWithNoArgsConstructor() {
+    void shouldCreateOrderItemEventUsingFactoryMethod() {
         // When
-        OrderCreatedEvent event = new OrderCreatedEvent();
+        var item = OrderCreatedEvent.OrderItemEvent.of("PROD-002", "Another Product", 3, new BigDecimal("29.99"));
 
         // Then
-        assertThat(event.getOrderId()).isNull();
-        assertThat(event.getItems()).isNull();
-    }
-
-    @Test
-    void shouldSupportSetters() {
-        // Given
-        OrderCreatedEvent event = new OrderCreatedEvent();
-
-        // When
-        event.setOrderId("ORDER-456");
-        event.setCustomerId("CUST-002");
-
-        // Then
-        assertThat(event.getOrderId()).isEqualTo("ORDER-456");
-        assertThat(event.getCustomerId()).isEqualTo("CUST-002");
+        assertThat(item.productId()).isEqualTo("PROD-002");
+        assertThat(item.productName()).isEqualTo("Another Product");
+        assertThat(item.quantity()).isEqualTo(3);
+        assertThat(item.price()).isEqualTo(new BigDecimal("29.99"));
     }
 
     @Test
     void shouldHaveEqualsAndHashCode() {
         // Given
-        OrderCreatedEvent event1 = OrderCreatedEvent.builder()
-                .orderId("ORDER-123")
-                .customerId("CUST-001")
-                .build();
+        var event1 = new OrderCreatedEvent(
+                "ORDER-123", "CUST-001", "123 Main St", "CORR-001",
+                List.of(), new BigDecimal("100.00"), null);
 
-        OrderCreatedEvent event2 = OrderCreatedEvent.builder()
-                .orderId("ORDER-123")
-                .customerId("CUST-001")
-                .build();
+        var event2 = new OrderCreatedEvent(
+                "ORDER-123", "CUST-001", "123 Main St", "CORR-001",
+                List.of(), new BigDecimal("100.00"), null);
 
         // Then
         assertThat(event1).isEqualTo(event2);
         assertThat(event1.hashCode()).isEqualTo(event2.hashCode());
+    }
+
+    @Test
+    void shouldHaveToString() {
+        // Given
+        var event = new OrderCreatedEvent(
+                "ORDER-789", "CUST-003", "456 Oak Ave", "CORR-002",
+                List.of(), new BigDecimal("50.00"), null);
+
+        // Then
+        assertThat(event.toString()).contains("ORDER-789");
+        assertThat(event.toString()).contains("CUST-003");
     }
 }
